[gd_scene load_steps=12 format=2]

[ext_resource path="res://characters/Mobs/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/Mobs/Drone/Drone.gd" type="Script" id=2]
[ext_resource path="res://models/MobDrone/MobDrone.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/Smoke/Smoke.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/mobs/drone/idle_drone.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/mobs/drone/destroy_drone.wav" type="AudioStream" id=6]
[ext_resource path="res://tools/combat/CombatStats/CombatStats.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.309408, 0.34242, 0.147112 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.331187, 0.336668, 0.154797 )

[sub_resource type="SphereShape" id=3]
radius = 6.01007

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 4.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("IdleSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="Drone" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="HitBox" parent="." index="1"]
combat_stats = NodePath("../CombatStats")

[node name="CollisionShape" parent="HitBox" index="0"]
shape = SubResource( 2 )

[node name="MobDrone" parent="." index="3" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 0 )

[node name="Detection" type="Area" parent="." index="4"]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="Detection" index="0"]
shape = SubResource( 3 )

[node name="AttackPosition" type="Position3D" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.55 )

[node name="Smoke" parent="." index="6" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
visible = false

[node name="IdleSound" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 5 )
unit_size = 20.0
max_distance = 25.0

[node name="DestroySound" type="AudioStreamPlayer3D" parent="." index="8"]
stream = ExtResource( 6 )
unit_db = 40.0
unit_size = 40.0
pitch_scale = 2.0
max_distance = 30.0

[node name="CombatStats" parent="." index="9" instance=ExtResource( 7 )]
max_health = 40
ice_resistance = 2

[node name="RemoveTimer" type="Timer" parent="." index="10"]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]
autoplay = "idle"
anims/idle = SubResource( 4 )
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="damage_taken" from="CombatStats" to="." method="_on_CombatStats_damage_taken"]
[connection signal="health_depleted" from="CombatStats" to="." method="_on_CombatStats_health_depleted"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]

[editable path="HitBox"]
